compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_accessor_multiple_variants_positions_other_than_first.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, age: Int, title: String)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([get_name/1, get_age/1]).
-export_type([person/0]).

-type person() :: {teacher, binary(), integer(), binary()} | {student, binary(), integer()}.

-spec get_name(person()) -> binary().
get_name(Person) ->
    erlang:element(2, Person).

-spec get_age(person()) -> integer().
get_age(Person) ->
    erlang:element(3, Person).
