compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_updates3.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n\npub fn main() {\n    let new_p = Person(..return_person(), age: 28)\n    new_p\n}\n\nfn return_person() {\n    Person(\"Quinn\", 27)\n}\n"
---
----- SOURCE CODE

pub type Person { Person(name: String, age: Int) }

pub fn main() {
    let new_p = Person(..return_person(), age: 28)
    new_p
}

fn return_person() {
    Person("Quinn", 27)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).
-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-spec return_person() -> person().
return_person() ->
    {person, ~"Quinn", 27}.

-spec main() -> person().
main() ->
    New_p = begin
        _record = return_person(),
        {person, erlang:element(2, _record), 28}
    end,
    New_p.
