compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__type_called_record_does_not_overwrite_erlang_builtin_record_type.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "pub type Record { Record(Int) }"
---
----- SOURCE CODE
pub type Record { Record(Int) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export_type([record_/0]).

-type record_() :: {record, integer()}.
